tests/snapshots/blockflow/blocks_with_events/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - blockflow
    - blocks-with-events
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <FROM_TS>

Usage: kermit blockflow blocks-with-events <FROM_TS> [TO_TS]

For more information, try '--help'.
