tests/snapshots/blockflow/blocks_with_events/two_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - blockflow
    - blocks-with-events
    - "100"
    - "200"
---
success: true
exit_code: 0
----- stdout -----
{
  "blocksAndEvents": [
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    [],
    []
  ]
}

----- stderr -----
